Fixed some issues on safari

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -476,6 +476,7 @@ section#hero {
 #skill-item-img {
     border-radius: 0;
     width: 40px;
+    height: 40px;
     display: inline;
     margin: 0 8rem 0 1rem;
 }
